RESOLVED FIXED118345
[GTK] webkit_set_cache_model is not turning the cache off
https://bugs.webkit.org/show_bug.cgi?id=118345
Summary [GTK] webkit_set_cache_model is not turning the cache off
Tomas Popela
Reported 2013-07-03 02:26:48 PDT
When using webkit_set_cache_model (WEBKIT_CACHE_MODEL_DOCUMENT_VIEWER), WebKit should disable the cache completely. Now it is not disabled properly.
Attachments
Patch (1.73 KB, patch)
2013-07-03 02:37 PDT, Carlos Garcia Campos
gustavo: review+
Carlos Garcia Campos
Comment 1 2013-07-03 02:29:13 PDT
Yes, this is because setting the cache capacities to 0 doesn't disable the cache, capacities are only used when pruning the cache, but when adding new resources only whether the cache is enabled is checked.
Carlos Garcia Campos
Comment 2 2013-07-03 02:37:59 PDT
Sergio Villar Senin
Comment 3 2013-07-03 05:00:35 PDT
Comment on attachment 205984 [details] Patch Great!
Carlos Garcia Campos
Comment 4 2013-07-08 22:40:21 PDT
Note You need to log in before you can comment on or make changes to this bug.